# M2_research_project

./: README.md  fr3.urdf.xacro  how_to_real_robot.md
franka_gazebo/franka_gazebo_bringup/config/: franka_gazebo_controllers.yaml
franka_gazebo/franka_gazebo_bringup/launch/: gazebo_cartesian_impedance_controller_example.launch.py  gazebo_cartesian_velocity_controller_example.launch.py  gazebo_joint_position_controller_example.launch.py
my_cartesian_impedance_controller/: CMakeLists.txt  package.xml  plugin_description.xml
my_cartesian_impedance_controller/include/my_cartesian_impedance_controller/: my_cartesian_impedance_controller.hpp
my_cartesian_impedance_controller/src/: my_cartesian_impedance_controller.cpp
my_cartesian_velocity_controller/: CMakeLists.txt  package.xml  plugin_description.xml
my_cartesian_velocity_controller/include/my_cartesian_velocity_controller/: my_cartesian_velocity_controller.hpp
my_cartesian_velocity_controller/src/: my_cartesian_velocity_controller.cpp
my_cartesian_velocity_controller/urdf/: fr3.urdf
my_franka_controller/: CMakeLists.txt  package.xml
my_franka_controller/script_python/: draw_square.py
my_franka_controller/src/: velocity_test_node.cpp
